--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
+    "csv-write-stream": "^2.0.0",
     "node-zendesk": "^1.2.1"
   }
 }
